--- a/templates/search.html
+++ b/templates/search.html
@@ -38,12 +38,13 @@
     <div class="container">
     <!-- {{ form.autocomp2.label }}: {{ form.autocomp2 }}
     {{ form.autocomp.label }}: {{ form.autocomp }} -->
-    <h2>COVID-19 Testing Labs US<sup>*</sup></h2>
+    <h2 class="p-1">COVID-19 Testing Labs US<sup>*</sup></h2>
+  
     <div id="map"></div>
 
     <form>
         <fieldset>
-        <legend>Select State and City</legend>
+        <legend class="p-1">Select State and City</legend>
         <p>
             <label>Select State</label>
             <select id = "stateList">
