--- a/templates/search.html
+++ b/templates/search.html
@@ -50,7 +50,7 @@
             <select id = "stateList">
                 <option value="0">Select</option>
             </select>
-            <label>Select City</label>
+            <label class="p-1">Select City</label>
             <select id = "cityList" disabled >
             
             </select>
