added marker image

--- a/templates/search.html
+++ b/templates/search.html
@@ -57,8 +57,8 @@
         </p>
         </fieldset>
     </form>
-    <br/>
-    <b>Click on the Marker to get directions</b></br>
+    
+    <b class="p2">Click on the Marker <img src="/static/images/map-marker.png" alt="Image"> to get directions</b></br>
     <sup>*</sup>Content-source : <a target='_new' href= 'https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx</a> <br/>
     <a href= 'https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx</a>
     <br/>
