--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#trainers-section" class="nav-link">Disclaimer</a></li>
-                <li><a href="#contact-section" class="nav-link">Refrence</a></li>
+                <li><a href="#contact-section" class="nav-link">Reference</a></li>
               </ul>
             </nav>
           </div>
