--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@
             <h2 class="text-black mb-3">Reference</h2>
             <!-- <p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
             <p class="text-muted mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
-            <ul class="list-unstyled ul-paw primary mb-0">
+            <ul class="list-unstyled ul-check primary mb-0">
               <li><a href='https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/testing-in-us.html'>https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/testing-in-us.html</a></li>
               <li><a href='https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx</a></li>
               <li><a href='https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx</a></li>
@@ -199,23 +199,20 @@
     </section>
     
     
-    <footer class="site-footer">
+    <!-- <footer class="site-footer"> -->
       <div class="container">
-        
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <div class="border-top pt-5">
-              <p class="copyright"><small>
+        <div col-12>
+        <div class="row text-center ">
+             <p class="copyright text-center"><small>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small></p>
         
-            </div>
           </div>
           
         </div>
       </div>
-    </footer>
+    <!-- </footer> -->
 
   </div> <!-- .site-wrap -->
 
