--- a/templates/index.html
+++ b/templates/index.html
@@ -187,9 +187,9 @@
             <!-- <p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
             <p class="text-muted mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
             <ul class="list-unstyled ul-check primary mb-0">
-              <li><a href='https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/testing-in-us.html'>https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/testing-in-us.html</a></li>
-              <li><a href='https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx</a></li>
-              <li><a href='https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx</a></li>
+              <li><a target="_new" href='https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/testing-in-us.html'>https://www.cdc.gov/coronavirus/2019-ncov/cases-updates/testing-in-us.html</a></li>
+              <li><a target="_new" href='https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Pages/2019-nCoV.aspx</a></li>
+              <li><a target="_new" href='https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx'>https://www.aphl.org/programs/preparedness/Crisis-Management/Documents/CLIA%20COC%20and%20COA%20Labs%20w_Virology_Subspecialty_3-6-2020.xlsx</a></li>
             </ul>
             
           </div>
